# Meshlite

./: .gitignore
.github/workflows/: ci.yml  release.yml
charts/conduit/: Chart.yaml  values.yaml
charts/kprobe/: Chart.yaml  values.yaml
charts/meshlite/: Chart.yaml  values.yaml
charts/sigil/: Chart.yaml  values.yaml
charts/trace/: Chart.yaml  values.yaml
conduit/: Cargo.toml  Dockerfile
conduit/src/: cluster_client.rs  egress.rs  ingress.rs  main.rs  telemetry.rs  tls_config.rs
crates/meshlite-tls/: Cargo.toml
demo/service-validator/: Dockerfile  go.mod  main.go  main_test.go
docs/: architecture.md  final-architecture-explainer.md  tech-stack.md  timeline.md
docs/phase-1/: phase1-outcome-report.md  phase1-runbook.md
docs/phase-2/: phase2-approach.md  phase2-outcome-report.md  phase2-runbook.md
docs/phase-3/: phase3-approach.md  phase3-outcome-report.md  phase3-runbook.md
docs/phase-4/: phase4-approach.md  phase4-outcome-report.md  phase4-runbook.md
docs/phase-5/: phase5-approach.md  phase5-outcome-report.md  (+1 more)
hack/: bench.sh  build-and-load.sh  check-kprobe.sh  check-sigil.sh  dev-cluster.sh  gen-proto.sh  kind-config-cluster-2.yaml  kind-config.yaml  package-release.ps1  teardown.sh  validate-ci.ps1
kprobe/: Cargo.toml  Dockerfile  rust-toolchain.toml
kprobe/kprobe-userspace/: Cargo.toml  build.rs
kprobe/kprobe-userspace/src/: cert_store.rs  lib.rs  main.rs  pod_watcher.rs  policy_cache.rs  sigil_client.rs  telemetry.rs  verdict_sync.rs
meshctl/: Dockerfile  go.mod  main.go
sigil/: Dockerfile  coverage.out  go.mod  go.sum
(+94 files in other folders)
