[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

[dependencies]
meshlite-tls  = { path = "../crates/meshlite-tls" }
tokio         = { version = "1", features = ["full"] }
tokio-rustls  = "0.26"
rustls        = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
log           = "0.4"
env_logger    = "0.11"
clap          = { version = "4", features = ["derive", "env"] }

[[bin]]
name = "conduit"
path = "src/main.rs"
